<resources>
    <string name="app_name">Moving Moth</string>
    <string name="textview">TextView</string>
    <string name="read_distance">Read distance [m]</string>
    <string name="elevator_lift_level">Elevator lift level</string>
    <string name="distance_sensors_data">Distance Sensors Data [m]</string>
    <string name="read_lift_level">Read lift level [m]</string>
    <string name="speed_of_the_platform">Speed of the platform [m/s]</string>
    <string name="read_speed_of_platform">Read speed of platform [m/s]</string>
    <string name="take_photo">Take photo</string>
    <string name="level_of_the_lift">Level of the lift [m]</string>
    <string name="read_level_of_the_lift">Read level of the lift [m]</string>
    <string name="stop_mapping_via_lidar">Stop mapping via LIDAR</string>
    <string name="start_mapping_via_lidar">Start mapping via LIDAR</string>
    <string name="lifticon">LiftIcon</string>
    <string name="lowericon">LowerIcon</string>
    <string name="image_from_camera">Image from camera</string>
</resources>