<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Pilot_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:foregroundTint="#030708"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">


    <ImageButton
        android:id="@+id/lower"
        android:layout_width="56dp"
        android:layout_height="48dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/lowericon"
        android:rotationX="180"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.407"
        app:srcCompat="@drawable/arrow"
        app:tint="#FE0000"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/TitleView"
        android:layout_width="350dp"
        android:layout_height="256dp"
        android:fontFamily="@font/abril_fatface"
        android:text="Moving Platform"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#00695C"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.442"
        tools:ignore="HardcodedText,TextSizeCheck,TextContrastCheck" />

    <ImageButton
        android:id="@+id/UpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/forward_icon"
        tools:ignore="DuplicateSpeakableTextCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/BackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UpButton"
        app:srcCompat="@drawable/bac"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/RightButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/BackButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/UpButton"
        app:layout_constraintTop_toBottomOf="@+id/UpButton"
        app:srcCompat="@drawable/rig"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/LeftButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/BackButton"
        app:layout_constraintEnd_toStartOf="@+id/UpButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UpButton"
        app:srcCompat="@drawable/lef"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@drawable/lef" />

    <ImageButton
        android:id="@+id/StopButton"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/BackButton"
        app:layout_constraintEnd_toStartOf="@+id/RightButton"
        app:layout_constraintStart_toEndOf="@+id/LeftButton"
        app:layout_constraintTop_toBottomOf="@+id/UpButton"
        app:srcCompat="@drawable/stop_icon"
        app:tint="#FF0000"
        tools:ignore="ImageContrastCheck" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/toolbar_gradient"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/start_mapping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:contentDescription="@string/start_mapping_via_lidar"
        android:src="@drawable/map_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.165"
        app:tint="#318A25" />

    <ImageButton
        android:id="@+id/stop_mapping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:contentDescription="@string/stop_mapping_via_lidar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.925"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.164"
        app:srcCompat="@drawable/dest_icon" />

    <ImageButton
        android:id="@+id/lift"
        android:layout_width="56dp"
        android:layout_height="48dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/lifticon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.462"
        app:srcCompat="@drawable/arrow"
        app:tint="#318925"
        tools:ignore="ImageContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>